Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19075

CMakeProjectManager: ninja support seems to be broken

    XMLWordPrintable

Details

    Description

      Steps to reproduce:

      • have CMake correctly set up, ninja installed and ensure that the kit you're going to use has ninja as generator
      • create a simple application (Quick Application - Empty or Console Application) from template
      • select CMake as build system
      • try to build/run/debug

      Current result:

      • not sure what exactly is wrong, but it seems as if the build directory is not created and cmake fails to build as it cannot change into the directory obviously

      Note: seems to only happen for newly created projects or projects opened for the first time. If creating the respective build directory manually or switching to Unix Makefiles as generator everything is fine.. Might also be something related to using icecc: it appeared that cmake had a problem with the used compilers. switching to the real gcc and back to icecc solved the issue as well..

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes